--- a/package.json
+++ b/package.json
@@ -6,5 +6,19 @@
   "author": "Matan Shavit <matanshavit@users.noreply.github.com>",
   "license": "MIT",
   "private": true,
-  "workspaces": []
+  "workspaces": [],
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "prettier": "^2.3.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
+    "*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
+  },
+  "scripts": {
+    "prepare": "husky install"
+  }
 }
