--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@iconify-icons/emojione": "^1.1.0",
+    "@iconify/react": "^1.1.4",
     "@material-ui/core": "^4.11.4",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
