--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@iconify-icons/emojione": "^1.1.0",
     "@iconify/react": "^1.1.4",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
