add build command

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "start": "yarn workspace client start"
+    "start": "yarn workspace client start",
+    "build": "yarn workspace client build"
   }
 }
