--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "5",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
